Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20970

Breakpoint regressions

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 4.8.0-beta1
    • Debugger
    • None
    • Debian sid
    • 7dcfe86c34c18985b13717234369e2fe181dc089 fd25bbd99d134f1a08ec8b798250dd696d8323ef

    Description

      Following 3b5ecac238b87615b44b27375cef0b4f1d4637e4, I've noticed a few regressions:

      • There is no way to edit a breakpoint with context menu while the debugger is not running
      • On right-clicking on a breakpoint marker while running, the context menu is missing "Disable Breakpoint"
      • If I edit a breakpoint and add a command, it doesn't seem to be stored. It works for new breakpoints though.
      • Data breakpoints appear twice, and only one of them can be deleted.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes